--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
       to {opacity: 1; transform: translateY(0);}
     }
 
-    h2 { margin-bottom: 10px; color: #333; }
-    p { color: #444; font-size: 15px; }
-
     .action {
       display: flex;
       align-items: center;
@@ -56,7 +53,6 @@
       box-shadow: 0 3px 10px rgba(0,0,0,0.15);
     }
 
-    .action:hover { transform: translateY(-2px); opacity: 0.9; }
     #ttBtn { background: linear-gradient(90deg, #ff0000, #ff4d4d); }
     #zlBtn { background: linear-gradient(90deg, #0088cc, #33b1ff); }
 
@@ -73,37 +69,35 @@
 
     .action.success .checkmark {
       display: inline;
-      animation: pop 0.3s ease forwards;
     }
 
-    @keyframes pop {
-      from { transform: scale(0); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+    #status {
+      margin-top: 15px;
+      font-weight: 500;
+      color: #333;
     }
 
-    .status { margin-top: 15px; font-weight: 500; color: #333; }
+    /* Nút tải lại – ẩn hoàn toàn đến khi hết 10s */
     #retryBtn {
-      margin-top: 12px;
-      display: none; /* ẩn trước khi hoàn thành nhiệm vụ */
+      margin-top: 15px;
+      display: none;
       padding: 10px 16px;
+      background: orange;
+      color: white;
       font-weight: 600;
       border-radius: 8px;
-      background: #ff9800;
-      color: white;
-      cursor: pointer;
       text-decoration: none;
     }
-    #retryBtn:hover { filter: brightness(1.1); }
   </style>
 </head>
-<body>
 
+<body>
   <div class="card">
     <h2>🔒 Nội dung bị khóa</h2>
     <p>Vui lòng ấn vào cả 2 nút dưới đây để mở khóa</p>
 
     <div id="ttBtn" class="action">
-      ▶️ Follow Tiktok
+      ▶️ Follow TikTok
       <span class="checkmark">✅</span>
     </div>
 
@@ -112,9 +106,9 @@
       <span class="checkmark">✅</span>
     </div>
 
-    <div id="status" class="status">❌ Chưa hoàn thành.</div>
+    <div id="status">❌ Chưa hoàn thành.</div>
 
-    <!-- Nút tải lại sẽ hiện sau khi hoàn thành nhiệm vụ -->
+    <!-- Chỉ hiện sau khi đếm ngược xong -->
     <a id="retryBtn" href="base.apk" download>🔄 Tải lại nếu có sự cố</a>
   </div>
 
@@ -127,44 +121,52 @@
     let ttDone = false;
     let zlDone = false;
 
-    function checkBothDone() {
-      if(ttDone && zlDone){
-        retryBtn.style.display = "inline-block"; // hiện nút tải lại
-        let countdown = 10;
-        statusEl.innerText = `⏳ Tự tải file trong ${countdown} giây...`;
+    function startCountdown() {
+      let timeLeft = 10;
+      statusEl.innerText = `⏳ Tự tải file trong ${timeLeft} giây...`;
 
-        const timer = setInterval(() => {
-          countdown--;
-          if(countdown > 0){
-            statusEl.innerText = `⏳ Tự tải file trong ${countdown} giây...`;
-          } else {
-            clearInterval(timer);
-            statusEl.innerText = "✅ Đang tải file...";
-            window.location.href = retryBtn.href; // tự động tải
-          }
-        }, 1000);
+      const timer = setInterval(() => {
+        timeLeft--;
+        statusEl.innerText = `⏳ Tự tải file trong ${timeLeft} giây...`;
+
+        if (timeLeft <= 0) {
+          clearInterval(timer);
+
+          statusEl.innerText = "⬇️ Đang tải file...";
+          window.location.href = retryBtn.href; // tự tải
+
+          // Hiện nút tải lại sau 10s
+          retryBtn.style.display = "inline-block";
+        }
+      }, 1000);
+    }
+
+    function checkCompleted() {
+      if (ttDone && zlDone) {
+        statusEl.innerText = "⏳ Chuẩn bị tải...";
+        startCountdown(); // bắt đầu đếm ngược
       }
     }
 
     ttBtn.onclick = () => {
-      if(!ttDone){
-        ttBtn.classList.add("success");
+      if (!ttDone) {
         ttDone = true;
+        ttBtn.classList.add("success");
         window.open("https://tiktok.com/@plongdev.128", "_blank");
         statusEl.innerText = "✅ Đã nhấn Follow TikTok!";
-        checkBothDone();
+        checkCompleted();
       }
-    }
+    };
 
     zlBtn.onclick = () => {
-      if(!zlDone){
-        zlBtn.classList.add("success");
+      if (!zlDone) {
         zlDone = true;
+        zlBtn.classList.add("success");
         window.open("https://zalo.me/g/pvkacy065", "_blank");
         statusEl.innerText = "✅ Đã tham gia nhóm Zalo!";
-        checkBothDone();
+        checkCompleted();
       }
-    }
+    };
   </script>
 
 </body>
