--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div id="status">❌ Chưa hoàn thành.</div>
 
     <!-- Chỉ hiện sau khi đếm ngược xong -->
-    <a id="retryBtn" href="base.apk" download>🔄 Tải lại nếu có sự cố</a>
+    <a id="retryBtn" href="base.apk" download>🔄 Nhấn vào đây để tải lại nếu có sự cố</a>
   </div>
 
   <script>
