--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     function startCountdown() {
       let timeLeft = 10;
-      statusEl.innerText = `⏳ Tự tải file trong ${timeLeft} giây...`;
+      statusEl.innerText = `⏳ Tự động tải file sau ${timeLeft} giây...`;
 
       const timer = setInterval(() => {
         timeLeft--;
