--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
       const timer = setInterval(() => {
         timeLeft--;
-        statusEl.innerText = `⏳ Tự tải file trong ${timeLeft} giây...`;
+        statusEl.innerText = `⏳ Tự động tải file sau ${timeLeft} giây...`;
 
         if (timeLeft <= 0) {
           clearInterval(timer);
